Revert "move /content folder to /contents"
This reverts commit 98366d64399457656694bee94ebe33d9210ab007.

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,13 +3,13 @@ backend:
   repo: "Jayzz55/talking-with-netlify" # replace by your repo
   branch: master # replace if you want netlify-cms publish on a different branch
 
-public_folder: "contents" # the same as your phenomic.source in your package.json
+public_folder: "content" # the same as your phenomic.source in your package.json
 media_folder: "assets" # the same as your phenomic.assets in your package.json
 
 collections:
   - name: "post"
     label: "Post"
-    folder: "posts" # a subfolder of your public_folder
+    folder: "_content/posts" # a subfolder of your public_folder
     create: true
     card: {type: "alltype", text: "title"}
     fields:
